k8s/workloads/fileflows/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fileflows
  name: fileflows-intel
  labels:
    app: fileflows-intel
spec:
  replicas: 0
  selector:
    matchLabels:
      app: fileflows-intel
  template:
    metadata:
      labels:
        app: fileflows-intel
    spec:
      nodeSelector:
        platform.io/type: main
      hostname: nuc
      containers:
        - name: fileflows-intel
          image: revenz/fileflows:latest
          # image: revenz/fileflows:25.05
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - SYS_RAWIO
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: media
              mountPath: /media
      volumes:
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
        - name: media
          persistentVolumeClaim:
            claimName: media
