k8s/workloads/fileflows/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fileflows
  name: fileflows
  labels:
    app: fileflows
spec:
  replicas: 0
  selector:
    matchLabels:
      app: fileflows
  template:
    metadata:
      labels:
        app: fileflows
    spec:
      nodeSelector:
        platform.io/type: secondary
      containers:
        - name: fileflows
          image: revenz/fileflows
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: media
              mountPath: /media
            - name: config
              mountPath: /app/Data
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: config
          persistentVolumeClaim:
            claimName: config
---
apiVersion: v1
kind: Service
metadata:
  name: fileflows
  namespace: fileflows
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: fileflows
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fileflows
  namespace: fileflows
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fileflows.remini.site`)
      kind: Rule
      services:
        - name: fileflows
          port: 80
